# report-automation

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/superpowers/plans/: 2026-05-26-report-automation-clean-room.md
docs/superpowers/specs/: 2026-05-26-report-automation-clean-room.md
team_activity_report/: __init__.py  __main__.py  charts.py  cli.py  db.py  delivery.py  gate.py  generator.py  queries.py  schema.sql  seed.py  types.py
team_activity_report/templates/: report.html.j2
tests/: conftest.py  test_charts.py  test_cli.py  test_delivery.py  test_gate.py  test_generator.py  test_queries.py  test_seed.py
