[project]
name = "team-activity-report"
version = "0.1.0"
description = "Generate daily engineering-team activity reports from Postgres. Clean-room reference implementation of the scheduled-report pattern."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jamil Mendez" }]
dependencies = [
    "asyncpg>=0.29",
    "matplotlib>=3.8",
    "Jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
team-activity-report = "team_activity_report.cli:cli_entry"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["team_activity_report*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
team_activity_report = ["schema.sql", "templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers"]

[tool.coverage.run]
source = ["team_activity_report"]
omit = ["team_activity_report/__main__.py", "team_activity_report/cli.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "matplotlib.*", "jinja2.*", "dotenv.*"]
ignore_missing_imports = true
